Side Tasks 1 & 2 Complete, Bugfixes & Features
