# docs/swagger.yaml
@@ -2,6 +2,8 @@ basePath: /
 definitions:
   avito.Segment:
     properties:
+      chance:
+        type: integer
       seg_name:
         type: string
     required:
@@ -13,10 +15,14 @@ definitions:
         type: integer
       id:
         type: integer
+      month:
+        type: integer
       seg_names:
         items:
           type: string
         type: array
+      year:
+        type: integer
     required:
     - id
     type: object
@@ -186,6 +192,47 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: Remove User from Segment(s)
+      tags:
+      - User
+  /user/getActions/:
+    post:
+      consumes:
+      - application/json
+      description: Get Actions the User was involved in
+      operationId: get-actions
+      parameters:
+      - description: User ID and Date
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/avito.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: string
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get User Actions By ID and Date
       tags:
       - User
   /user/getSegments/{id}:
